<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CroissantActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/croissant_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/croissant_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:adjustViewBounds="true"
                android:background="@color/css_gray"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/croissant_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/croissant_image"
                android:layout_marginTop="4dp"
                android:padding="10dp"
                android:text="@string/recipe_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#ffff00"
                android:theme="@style/ThemeOverlay.AppCompat.Light" />
            <TextView
                android:id="@+id/croissant_prep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prep_cook_time_2hrs"
                android:textColor="?android:textColorSecondary"
                android:layout_below="@id/croissant_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:padding="10dp"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_prep_time"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                />

            <!--Add an Horizontal Line-->
            <View
                android:id="@+id/croissant_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/croissant_prep"
                android:background="@color/css_gray"
                />
            <TextView
                android:id="@+id/croissant_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_short_description"
                android:textColor="@color/navy_blue"
                android:layout_below="@id/croissant_divider"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:padding="8dp"
                android:layout_marginTop="3dp"
                android:textStyle="italic"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                />
        </RelativeLayout>



    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_below="@id/croissant_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_prepare_croissant"
            android:textStyle="bold"
            android:textColor="@color/navy_blue"/>

    </RelativeLayout>

</RelativeLayout>