<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/store_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/css_gray"
            android:paddingBottom="10dp"
            android:adjustViewBounds="true"
            />
        <TextView
            android:id="@+id/store_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_title"
            android:textColor="#ffff00"
            android:layout_alignBottom="@id/store_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            />
        <TextView
            android:id="@+id/store_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_time_open"
            android:textColor="?android:textColorSecondary"
            android:layout_below="@id/store_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:drawableStart="@drawable/ic_store_time"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            />

        <!--Add an Horizontal Line-->
        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/store_prep"
            android:background="@color/css_gray"
            />

        <TextView
            android:id="@+id/store_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:layout_marginTop="3dp"
            android:padding="8dp"
            android:text="@string/store_short_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/navy_blue"
            android:textStyle="italic"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
    </RelativeLayout>



</androidx.cardview.widget.CardView>