<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TRMActivity">
    <RelativeLayout
        android:id="@+id/trm_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/trm_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/css_gray"
            android:paddingBottom="10dp"
            android:adjustViewBounds="true"/>
        <TextView
            android:id="@+id/trm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_title"
            android:textColor="#ffff00"
            android:layout_alignBottom="@id/trm_image"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/trm_prep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_daily_from_7_00_a_m"
            android:textColor="?android:textColorSecondary"
            android:layout_below="@id/trm_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:padding="10dp"
            android:layout_marginTop="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:drawableStart="@drawable/ic_store_time" />
        <View
            android:id="@+id/trm_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/trm_prep"
            android:background="@color/css_gray"/>
        <TextView
            android:id="@+id/trm_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/store_short_description"
            android:textColor="@color/navy_blue"
            android:layout_below="@id/trm_divider"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:padding="8dp"
            android:layout_marginTop="3dp"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            android:textStyle="italic"
            />


    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/trm_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Another Cool TRM fact"
            android:textStyle="bold"
            android:textColor="@color/navy_blue"></TextView>

    </RelativeLayout>
</RelativeLayout>